[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
nom = "7.1.3"
sharded = { version = "0.2.1", features = ["ahash", "parking_lot"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["tracing", "full"] }
